progress: ARGGGGGGGGGG custom item registery is not working somehow

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,8 @@
         "-XX:+UseG1GC",
         "-XX:+ZGenerational",
         "-XX:+UseStringDeduplication",
+        "-XX:+AllowEnhancedClassRedefinition",
+        "-XX:HotswapAgent=fatjar",
         "--add-opens",
         "java.base/java.lang=ALL-UNNAMED",
         "--add-opens",
